# nightsong-bot

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml
deploy/: Dockerfile_dev
migrations/2019-12-29-104203_init/: down.sql  up.sql
src/: bot.rs  error.rs  main.rs  models.rs  state.rs  storage.rs  util.rs
src/commands/: context.rs  help.rs  mod.rs
src/commands/giveaway/: handler.rs  handlers.rs  manager.rs  mod.rs  models.rs  parser.rs  storage.rs  util.rs  utils.rs
src/commands/giveaway/formatters/: base.rs  mod.rs  reward.rs
src/commands/giveaway/strategies/: base.rs  manual.rs  mod.rs
src/db/: jsonb.rs  mod.rs  models.rs  schema.rs  util.rs
