[package]
name = "nightsong-bot"
version = "0.1.0"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
edition = "2018"
description = "The Discord bot for managing server rooms"
readme = "README.md"

[dependencies]
crossbeam = "0.7.3"
crossbeam-utils = "0.7.2"
dashmap = "3.11.7"
failure = "0.1.6"
lazy_static = "1.4.0"
rand = "0.7.3"
regex = "1.3.1"
readonly = "0.1.5"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.serenity]
default-features = true
version = "0.8.6"