[package]
name = "nightsong-bot"
version = "0.1.0"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
edition = "2021"
description = "The Discord bot for managing server rooms"
readme = "README.md"

[dependencies]
crossbeam = "0.8.2"
crossbeam-utils = "0.8.14"
dashmap = "5.4.0"
failure = "0.1.6"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.3.1"
readonly = "0.2.3"
uuid = { version = "1.2.2", features = ["v4"] }

[dependencies.serenity]
default-features = true
version = "0.8.6"